--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./assets/css/normalize.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/media.css" />
@@ -75,15 +76,98 @@
       </a>
     </header>
     <div class="slides container">
-      <div class="slide" style="background-image: url('assets/img/slide-1.jpg')">
-        <div class="slide-content">
-          <h2 class="slide-title">Неделя летних овощей</h2>
-          <p class="slide-desc">
-            Специальная овощная корзина. Новые продукты, специальные
-            цены,
-            скидки!
-          </p>
-          <button class="btn slide-btn">Заказать со скидкой</button>
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="slide" style="background-image: url('assets/img/slide-1.jpg')">
+              <div class="slide-content">
+                <h2 class="slide-title">Неделя летних овощей</h2>
+                <p class="slide-desc">
+                  Специальная овощная корзина. Новые продукты, специальные
+                  цены,
+                  скидки!
+                </p>
+                <button class="btn slide-btn">Заказать со скидкой</button>
+              </div>
+              <div class="slide-nav">
+                <div class="slide-nav__left">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M16.752 23.994L6.87897 14.121C6.31656 13.5584 6.00061 12.7955 6.00061 12C6.00061 11.2045 6.31656 10.4415 6.87897 9.87896L16.746 0.0119629L18.16 1.42596L8.29297 11.293C8.1055 11.4805 8.00018 11.7348 8.00018 12C8.00018 12.2651 8.1055 12.5194 8.29297 12.707L18.166 22.58L16.752 23.994Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+                <div class="slide-nav__right">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M7.24803 0.00603676L17.121 9.87904C17.6834 10.4416 17.9994 11.2045 17.9994 12C17.9994 12.7955 17.6834 13.5585 17.121 14.121L7.25403 23.988L5.84003 22.574L15.707 12.707C15.8945 12.5195 15.9998 12.2652 15.9998 12C15.9998 11.7349 15.8945 11.4806 15.707 11.293L5.83403 1.42004L7.24803 0.00603676Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide" style="background-image: url('assets/img/slide-2.jpg')">
+              <div class="slide-content">
+                <h2 class="slide-title">Неделя летних овощей</h2>
+                <p class="slide-desc">
+                  Специальная овощная корзина. Новые продукты, специальные
+                  цены,
+                  скидки!
+                </p>
+                <button class="btn slide-btn">Заказать со скидкой</button>
+              </div>
+              <div class="slide-nav">
+                <div class="slide-nav__left">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M16.752 23.994L6.87897 14.121C6.31656 13.5584 6.00061 12.7955 6.00061 12C6.00061 11.2045 6.31656 10.4415 6.87897 9.87896L16.746 0.0119629L18.16 1.42596L8.29297 11.293C8.1055 11.4805 8.00018 11.7348 8.00018 12C8.00018 12.2651 8.1055 12.5194 8.29297 12.707L18.166 22.58L16.752 23.994Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+                <div class="slide-nav__right">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M7.24803 0.00603676L17.121 9.87904C17.6834 10.4416 17.9994 11.2045 17.9994 12C17.9994 12.7955 17.6834 13.5585 17.121 14.121L7.25403 23.988L5.84003 22.574L15.707 12.707C15.8945 12.5195 15.9998 12.2652 15.9998 12C15.9998 11.7349 15.8945 11.4806 15.707 11.293L5.83403 1.42004L7.24803 0.00603676Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide" style="background-image: url('assets/img/slide-3.jpg')">
+              <div class="slide-content">
+                <h2 class="slide-title">Неделя летних овощей</h2>
+                <p class="slide-desc">
+                  Специальная овощная корзина. Новые продукты, специальные
+                  цены,
+                  скидки!
+                </p>
+                <button class="btn slide-btn">Заказать со скидкой</button>
+              </div>
+              <div class="slide-nav">
+                <div class="slide-nav__left">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M16.752 23.994L6.87897 14.121C6.31656 13.5584 6.00061 12.7955 6.00061 12C6.00061 11.2045 6.31656 10.4415 6.87897 9.87896L16.746 0.0119629L18.16 1.42596L8.29297 11.293C8.1055 11.4805 8.00018 11.7348 8.00018 12C8.00018 12.2651 8.1055 12.5194 8.29297 12.707L18.166 22.58L16.752 23.994Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+                <div class="slide-nav__right">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M7.24803 0.00603676L17.121 9.87904C17.6834 10.4416 17.9994 11.2045 17.9994 12C17.9994 12.7955 17.6834 13.5585 17.121 14.121L7.25403 23.988L5.84003 22.574L15.707 12.707C15.8945 12.5195 15.9998 12.2652 15.9998 12C15.9998 11.7349 15.8945 11.4806 15.707 11.293L5.83403 1.42004L7.24803 0.00603676Z"
+                      fill="#F66A15" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="slide-nav">
           <div class="slide-nav__left">
@@ -379,10 +463,12 @@
       </div>
     </footer>
     <div class="copyright">
-      <span class="copyright-desc" >2021 | Portfolio site by</span>
+      <span class="copyright-desc">2021 | Portfolio site by</span>
       <a class="author" href="https://vk.com/mamikonarsvk/" target="_blank">Mamikon</a>
     </div>
   </div>
+  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+  <script src='./assets/js/script.js'></script>
 </body>
 
 </html>
